--- a/DBaaS_CassandraDB_cassandradb.yaml
+++ b/DBaaS_CassandraDB_cassandradb.yaml
@@ -283,8 +283,8 @@ resources:
             sed 's/master_ip/$ip1/g' cassandra-config/cassandra.yaml
             mkdir cassandra-data
             docker pull cassandra 
-            #docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-data:/etc/cassandra/  -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -p 7000:7000 cassandra
-            docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -Dcassandra.config=cassandra-config/cassandra.yaml -d -p 7000:7000 cassandra
+            docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/etc/cassandra/  -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -e "CASSANDRA_Authorizer=CassandraAuthorizer" -e "CASSANDRA_Authenticator=PasswordAuthenticator"  -p 7000:7000 cassandra
+            #docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -Dcassandra.config=cassandra-config/cassandra.yaml -d -p 7000:7000 cassandra
             export http_proxy=http://$proxy_host:$proxy_port
             export https_proxy=http://$proxy_host:$proxy_port
 
@@ -391,8 +391,8 @@ resources:
             sed 's/master_ip/$ip1/g' cassandra-config/cassandra.yaml
             mkdir cassandra-data
             docker pull cassandra 
-            #docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip2" -e "CASSANDRA_SEEDS=$ip1" -p 7000:7000 cassandra
-            docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -Dcassandra.config=cassandra-config/cassandra.yaml -d -p 7000:7000 cassandra
+            docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip2" -e "CASSANDRA_SEEDS=$ip1" -e "CASSANDRA_Authorizer=CassandraAuthorizer" -e "CASSANDRA_Authenticator=PasswordAuthenticator" -p 7000:7000 cassandra
+            #docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -Dcassandra.config=cassandra-config/cassandra.yaml -d -p 7000:7000 cassandra
 
 
             # Installing Telegraf agent
@@ -499,8 +499,8 @@ resources:
             sed 's/master_ip/$ip1/g' cassandra-config/cassandra.yaml
             mkdir cassandra-data
             docker pull cassandra
-            #docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip3" -e "CASSANDRA_SEEDS=$ip1" -p 7000:7000 cassandra
-            docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -Dcassandra.config=cassandra-config/cassandra.yaml -d -p 7000:7000 cassandra
+            docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip3" -e "CASSANDRA_SEEDS=$ip1" -e "CASSANDRA_Authorizer=CassandraAuthorizer" -e "CASSANDRA_Authenticator=PasswordAuthenticator" -p 7000:7000 cassandra
+            #docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -Dcassandra.config=cassandra-config/cassandra.yaml -d -p 7000:7000 cassandra
 
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
             dpkg -i telegraf_1.10.3-1_amd64.deb
