--- a/DBaaS_CassandraDB_cassandradb.yaml
+++ b/DBaaS_CassandraDB_cassandradb.yaml
@@ -278,9 +278,14 @@ resources:
             systemctl enable docker
             
 
+            mkdir cassandra-config
+            wget -P cassandra-config https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml
+            sed 's/node_ip/$ip1/g' cassandra-config/cassandra.yaml
+            sed 's/master_ip/$ip1/g' cassandra-config/cassandra.yaml
+
             mkdir cassandra-data
             docker pull cassandra 
-            docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/etc/cassandra/"  -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -e "CASSANDRA_Authorizer=CassandraAuthorizer" -e "CASSANDRA_Authenticator=PasswordAuthenticator"  -p 7000:7000 cassandra
+            docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/etc/cassandra/" -v "cassandra-config:/etc/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -e "CASSANDRA_Authorizer=CassandraAuthorizer" -e "CASSANDRA_Authenticator=PasswordAuthenticator"  -p 7000:7000 cassandra
             export http_proxy=http://$proxy_host:$proxy_port
             export https_proxy=http://$proxy_host:$proxy_port
 
@@ -380,10 +385,15 @@ resources:
             EOF
             systemctl daemon-reload && systemctl restart docker
             systemctl enable docker
+            
+            mkdir cassandra-config
+            wget -P cassandra-config https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml
+            sed 's/node_ip/$ip2/g' cassandra-config/cassandra.yaml
+            sed 's/master_ip/$ip1/g' cassandra-config/cassandra.yaml
 
             mkdir cassandra-data
             docker pull cassandra 
-            docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip2" -e "CASSANDRA_SEEDS=$ip1" -e "CASSANDRA_Authorizer=CassandraAuthorizer" -e "CASSANDRA_Authenticator=PasswordAuthenticator" -p 7000:7000 cassandra
+            docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-data:/etc/cassandra/" -v "cassandra-config:/etc/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip2" -e "CASSANDRA_SEEDS=$ip1" -e "CASSANDRA_Authorizer=CassandraAuthorizer" -e "CASSANDRA_Authenticator=PasswordAuthenticator" -p 7000:7000 cassandra
             
             # Installing Telegraf agent
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
@@ -483,10 +493,14 @@ resources:
             systemctl daemon-reload && systemctl restart docker
             systemctl enable docker
 
+            mkdir cassandra-config
+            wget -P cassandra-config https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml
+            sed 's/node_ip/$ip3/g' cassandra-config/cassandra.yaml
+            sed 's/master_ip/$ip1/g' cassandra-config/cassandra.yaml
 
             mkdir cassandra-data
             docker pull cassandra
-            docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip3" -e "CASSANDRA_SEEDS=$ip1" -e "CASSANDRA_Authorizer=CassandraAuthorizer" -e "CASSANDRA_Authenticator=PasswordAuthenticator" -p 7000:7000 cassandra
+            docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-data:/etc/cassandra/" -v "cassandra-config:/etc/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip3" -e "CASSANDRA_SEEDS=$ip1" -e "CASSANDRA_Authorizer=CassandraAuthorizer" -e "CASSANDRA_Authenticator=PasswordAuthenticator" -p 7000:7000 cassandra
 
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
             dpkg -i telegraf_1.10.3-1_amd64.deb
