--- a/DBaaS_CassandraDB_cassandradb.yaml
+++ b/DBaaS_CassandraDB_cassandradb.yaml
@@ -285,7 +285,7 @@ resources:
 
             mkdir cassandra-data
             docker pull bitnami/cassandra 
-            docker run --restart always --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/bitnami" -p 9042:9042 -p 7000:7000 -e CASSANDRA_CLUSTER_NAME=cassandra-cluster -e CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra3 -e CASSANDRA_PASSWORD_SEEDER=yes -e CASSANDRA_PASSWORD=password bitnami/cassandra:latest
+            docker run --restart always --name=cassandra1 --hostname=cassandra1 -v "cassandra-data:/bitnami" -p 9042:9042 -p 7000:7000 -e CASSANDRA_CLUSTER_NAME=cassandra-cluster -e CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra3 -e CASSANDRA_PASSWORD_SEEDER=yes -e CASSANDRA_PASSWORD=password bitnami/cassandra:latest
 
             #docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-config:/etc/cassandra" -d  -p 7000:7000 cassandra
             #docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/etc/cassandra/" -v "cassandra-config:/etc/cassandra" -d -p 7000:7000 cassandra
@@ -396,7 +396,7 @@ resources:
 
             mkdir cassandra-data
             docker pull bitnami/cassandra 
-            docker run --restart always --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/bitnami" -p 9042:9042 -p 7000:7000 -e CASSANDRA_CLUSTER_NAME=cassandra-cluster -e CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra3 -e CASSANDRA_PASSWORD_SEEDER=yes -e CASSANDRA_PASSWORD=password bitnami/cassandra:latest
+            docker run --restart always --name=cassandra2 --hostname=cassandra2  -v "cassandra-data:/bitnami" -p 9042:9042 -p 7000:7000 -e CASSANDRA_CLUSTER_NAME=cassandra-cluster -e CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra3 -e CASSANDRA_PASSWORD_SEEDER=yes -e CASSANDRA_PASSWORD=password bitnami/cassandra:latest
             #docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-config:/etc/cassandra" -d -p 7000:7000 cassandra
             #docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/etc/cassandra/" -v "cassandra-config:/etc/cassandra" -d -p 7000:7000 cassandra
             
@@ -505,7 +505,7 @@ resources:
 
             mkdir cassandra-data
             docker pull bitnami/cassandra
-            docker run --restart always --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/bitnami" -p 9042:9042 -p 7000:7000 -e CASSANDRA_CLUSTER_NAME=cassandra-cluster -e CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra3 -e CASSANDRA_PASSWORD_SEEDER=yes -e CASSANDRA_PASSWORD=password bitnami/cassandra:latest
+            docker run --restart always --name=cassandra3 --hostname=cassandra3  -v "cassandra-data:/bitnami" -p 9042:9042 -p 7000:7000 -e CASSANDRA_CLUSTER_NAME=cassandra-cluster -e CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra3 -e CASSANDRA_PASSWORD_SEEDER=yes -e CASSANDRA_PASSWORD=password bitnami/cassandra:latest
             docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-config:/etc/cassandra" -d  -p 7000:7000 cassandra
             #docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/etc/cassandra/" -v "cassandra-config:/etc/cassandra" -d -p 7000:7000 cassandra
 
