--- a/DBaaS_CassandraDB_cassandradb.yaml
+++ b/DBaaS_CassandraDB_cassandradb.yaml
@@ -277,18 +277,12 @@ resources:
             systemctl daemon-reload && systemctl restart docker
             systemctl enable docker
             
-
-            mkdir cassandra-config
-            wget -P cassandra-config https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml
-            sed 's/node_ip/$ip1/g' cassandra-config/cassandra.yaml
-            sed 's/master_ip/$ip1/g' cassandra-config/cassandra.yaml
-
             mkdir cassandra-data
-            docker pull bitnami/cassandra 
-            #docker run --restart always --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/bitnami" -p 9042:9042 -p 7000:7000 -e CASSANDRA_HOST=$ip1 -e CASSANDRA_CLUSTER_NAME=cassandra-cluster -e CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra3 -e CASSANDRA_PASSWORD_SEEDER=yes -e CASSANDRA_PASSWORD=password bitnami/cassandra:latest
-
-            #docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-config:/etc/cassandra" -d  -p 7000:7000 cassandra
-            docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/etc/cassandra/" -v "cassandra-config/cassandra.yaml:/etc/cassandra/cassandra.yaml" -d -p 7000:7000 cassandra
+            docker pull cassandra
+            
+            docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -p 7000:7000 cassandra
+            docker exec -it cassandra1 sed -i 's/AllowAllAuthenticator/PasswordAuthenticator/g /etc/cassandra/cassandra.yaml'
+            docker restart cassandra1
             export http_proxy=http://$proxy_host:$proxy_port
             export https_proxy=http://$proxy_host:$proxy_port
 
@@ -389,16 +383,12 @@ resources:
             systemctl daemon-reload && systemctl restart docker
             systemctl enable docker
             
-            mkdir cassandra-config
-            wget -P cassandra-config https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml
-            sed 's/node_ip/$ip2/g' cassandra-config/cassandra.yaml
-            sed 's/master_ip/$ip1/g' cassandra-config/cassandra.yaml
-
             mkdir cassandra-data
-            docker pull bitnami/cassandra 
-            #docker run --restart always --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/bitnami" -p 9042:9042 -p 7000:7000 -e CASSANDRA_HOST=$ip2 -e CASSANDRA_CLUSTER_NAME=cassandra-cluster -e CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra3 -e CASSANDRA_PASSWORD_SEEDER=yes -e CASSANDRA_PASSWORD=password bitnami/cassandra:latest
-            #docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-config:/etc/cassandra" -d -p 7000:7000 cassandra
-            docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/etc/cassandra/" -v "cassandra-config/cassandra.yaml:/etc/cassandra/cassandra.yaml" -d -p 7000:7000 cassandra
+            docker pull cassandra 
+            
+            docker run --restart always -d --name=cassandra2 --hostname=cassandra2 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip2" -e "CASSANDRA_SEEDS=$ip1" -p 7000:7000 cassandra
+            #docker exec -it cassandra2 sed -i 's/AllowAllAuthenticator/PasswordAuthenticator/g /etc/cassandra/cassandra.yaml'
+            #docker restart cassandra2
             
             # Installing Telegraf agent
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
@@ -498,17 +488,12 @@ resources:
             systemctl daemon-reload && systemctl restart docker
             systemctl enable docker
 
-            mkdir cassandra-config
-            wget -P cassandra-config https://raw.githubusercontent.com/Mohamedji/HeatTemplates/master/cassandra.yaml
-            sed 's/node_ip/$ip3/g' cassandra-config/cassandra.yaml
-            sed 's/master_ip/$ip1/g' cassandra-config/cassandra.yaml
-
+            
             mkdir cassandra-data
-            docker pull bitnami/cassandra
-            #docker run --restart always --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/bitnami" -p 9042:9042 -p 7000:7000 -e CASSANDRA_HOST=$ip3 -e CASSANDRA_CLUSTER_NAME=cassandra-cluster -e CASSANDRA_SEEDS=cassandra1,cassandra2,cassandra3 -e CASSANDRA_PASSWORD_SEEDER=yes -e CASSANDRA_PASSWORD=password bitnami/cassandra:latest
-            #docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -v "cassandra-config:/etc/cassandra" -d  -p 7000:7000 cassandra
-            docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/etc/cassandra/" -v "cassandra-config/cassandra.yaml:/etc/cassandra/cassandra.yaml" -d -p 7000:7000 cassandra
-
+            docker pull cassandra
+            docker run --restart always -d --name=cassandra3 --hostname=cassandra3 -v "/etc/hosts:/etc/hosts" -v "cassandra-data:/var/lib/cassandra" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip3" -e "CASSANDRA_SEEDS=$ip1" -p 7000:7000 cassandra
+            #docker exec -it cassandra3 sed -i 's/AllowAllAuthenticator/PasswordAuthenticator/g /etc/cassandra/cassandra.yaml'
+            #docker restart cassandra3
             curl -L -O https://dl.influxdata.com/telegraf/releases/telegraf_1.10.3-1_amd64.deb
             dpkg -i telegraf_1.10.3-1_amd64.deb
 
