--- a/DBaaS_CassandraDB_cassandradb.yaml
+++ b/DBaaS_CassandraDB_cassandradb.yaml
@@ -277,9 +277,10 @@ resources:
             systemctl daemon-reload && systemctl restart docker
             systemctl enable docker
             
-            mkdir /root/cassandra-data
             docker pull cassandra
-            mkdir /root/cassandra-config
+            
+            mkdir -p /root/cassandra-data
+            mkdir -p /root/cassandra-config
             docker run --restart always -d --name=cassandra1 --hostname=cassandra1 -v "/etc/hosts:/etc/hosts" -v "/root/cassandra-data:/var/lib/cassandra" -v "/root/cassandra-config:/etc/cassandra/" -d -e "CASSANDRA_BROADCAST_ADDRESS=$ip1" -p 7000:7000 cassandra
             sleep 30
             docker exec -it cassandra1 sed -i 's/AllowAllAuthenticator/PasswordAuthenticator/g /etc/cassandra/cassandra.yaml'
